Fix burger icon not visible on dark images

--- a/src/assets/scss/components/burger.scss
+++ b/src/assets/scss/components/burger.scss
@@ -1,6 +1,6 @@
 
 .BurgerInner, .BurgerInner:before, .BurgerInner:after {
-    background-color: $black !important;
+    background-color: $white !important;
 }
 
 .BurgerActive {
